--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    //compile 'com.google.android.gms:play-services-places:11.2.0'
+    implementation  'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    //implementation 'com.google.android.gms:play-services:12.0.1'
 }
