--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.baoyz.pullrefreshlayout:library:1.2.0'
 }
