--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -32,6 +32,7 @@
         <activity android:name=".SetLogin" />
         <activity android:name=".ActivityChiTiet" />
         <activity android:name=".Map_api"></activity>
+        <activity android:name=".DichVu"></activity>
     </application>
 
 </manifest>
